--- a/task-manager-ui/src/app/task-item/task-item.component.html
+++ b/task-manager-ui/src/app/task-item/task-item.component.html
@@ -1,11 +1,21 @@
-<mat-card style="height: fit-content; width: 300px; padding: auto;" class="bg-dark text-white">
-  <mat-card-header style="display: flex;">
+<mat-card style="min-width: 250px;" fxFlexFill fxLayoutAlign="center center" class="item-bg bg-dark text-white">
+  <mat-card-header>
     <mat-card-title>{{task.title}}</mat-card-title>
-    <mat-card-subtitle class="mb-3" [ngSwitch]="task.status.toUpperCase()">
-      <span class="badge bg-warning" *ngSwitchCase="'TODO'">To Do</span>
-      <span *ngSwitchCase="'INPROGRESS'" class="badge bg-primary">In Progress</span>
-      <span *ngSwitchCase="'DONE'" class="badge bg-success">Complete</span>
-      <span *ngSwitchDefault class="badge bg-danger">Invalid Status</span>
+    <mat-card-subtitle class="mb-3" >
+      <span [ngSwitch]="task.status">
+        <span *ngSwitchCase="0" class="badge bg-info">To Do</span>
+        <span *ngSwitchCase="1" class="badge bg-primary">In Progress</span>
+        <span *ngSwitchCase="2" class="badge bg-success">Complete</span>
+        <span *ngSwitchDefault class="badge bg-danger">Invalid Status</span>
+      </span>
+      <span style="margin-left: 10px;" [ngSwitch]="task.priority">
+        <span *ngSwitchCase="0" class="badge bg-warning">Low</span>
+        <span *ngSwitchCase="1" class="badge bg-primary">Medium</span>
+        <span *ngSwitchCase="2" class="badge bg-success">High</span>
+        <span *ngSwitchCase="3" class="badge bg-success">Critical</span>
+        <span *ngSwitchCase="4" class="badge bg-success">Blocker</span>
+        <span *ngSwitchDefault class="badge bg-danger">Invalid Priority</span>
+      </span>
     </mat-card-subtitle>
   </mat-card-header>
   
@@ -15,9 +25,18 @@
 
   <mat-card-footer style="margin-top: 30px; padding-bottom: 20px;">
     <mat-card-actions>
-      <button class="btn btn-primary" mat-button><i class="fa fa-edit"></i></button>
-      <button style="margin-left: 15px;" class="btn btn-danger" mat-button><i class="fa fa-trash-o fa-lg"></i></button>
+      <button (click)="editTask()" class="btn btn-primary" mat-button><i class="fa fa-edit"></i></button>
+      <button (click)="deleteTask()" style="margin-left: 15px;" class="btn btn-danger" mat-button><i class="fa fa-trash-o fa-lg"></i></button>
     </mat-card-actions>
   </mat-card-footer>
-  
 </mat-card>
+<mat-card style="min-width: 250px;" fxFlexFill fxLayoutAlign="center center" class="item-bg bg-dark text-white">
+<!-- <div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <h6 class="card-subtitle mb-2 text-muted"><span class="label success">Success</span> <span class="label warning">Success</span></h6>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	<button (click)="editTask()" class="btn btn-primary" mat-button><i class="fa fa-edit"></i></button>
+    <button (click)="deleteTask()" style="margin-left: 15px;" class="btn btn-danger" mat-button><i class="fa fa-trash-o fa-lg"></i></button>
+  </div>
+</div> -->
