--- a/task-manager-ui/src/app/login-container/reset-password/reset-password.component.html
+++ b/task-manager-ui/src/app/login-container/reset-password/reset-password.component.html
@@ -5,28 +5,40 @@
     <div class="text-center mt-4 name">
         Task Manager
     </div>
-    <form class="p-3 mt-3" (ngSubmit)="onReset()" #signUpForm="ngForm">
-        <div class="form-field d-flex align-items-center">
-            <span class="far fa-user"></span>
-            <input
-                type="email"
-                name="email"
-                id="email"
-                placeholder="Enter your Email"
-                [(ngModel)]="email"
-                #signupEmailInput="ngModel"
-                required
-            >
-        </div>
-        <button type="submit" class="btn mt-3">Reset</button>
-    </form>
+    <div [ngSwitch]="stage">
+        <form *ngSwitchCase="0" class="p-3 mt-3" (ngSubmit)="onReset()" #signUpForm="ngForm">
+            <div class="form-field d-flex align-items-center">
+                <span class="far fa-user"></span>
+                <input type="email" name="email" id="email" placeholder="Enter your Email" [(ngModel)]="email"
+                    #resetEmailInput="ngModel" required>
+            </div>
+            <button [disabled]="!signUpForm.valid" type="submit" class="btn mt-3">Reset</button>
+        </form>
+        <form *ngSwitchCase="1" class="p-3 mt-3" (ngSubmit)="onVerify()" #signUpForm="ngForm">
+            <div class="form-field d-flex align-items-center">
+                <span class="far fa-user"></span>
+                <input type="text" name="otp" id="otp" placeholder="Enter OTP" [(ngModel)]="otp"
+                    #resetOtpInput="ngModel" required>
+            </div>
+            <button type="submit" class="btn mt-3">Verify</button>
+        </form>
+        <form *ngSwitchCase="2" class="p-3 mt-3" (ngSubmit)="onChangePassword()" #signUpForm="ngForm">
+            <div class="form-field d-flex align-items-center">
+                <span class="far fa-user"></span>
+                <input type="password" name="password" id="password" placeholder="Enter new password" [(ngModel)]="newPassword"
+                    #resetNewPasswordInput="ngModel" required>
+            </div>
+            <button type="submit" class="btn mt-3">Change Password</button>
+        </form>
+    </div>
+    
     <div class="text-center fs-6">
         <a class="text-center fs-6" role="button" (click)="goToLogin()">Go To Login</a>
     </div>
-    <span
-        class="help-block"
-        style="font-size: small; font-style: italic; color: red;"
-        *ngIf="reset_error !== null">
-        {{singup_error}}
+    <span class="help-block" style="font-size: small; font-style: italic; color: red;" *ngIf="error !== null">
+        {{error}}
+    </span>
+    <span class="help-block" style="font-size: small; font-style: italic; color: green;" *ngIf="message !== null">
+        {{message}}
     </span>
 </div>
