--- a/task-manager-ui/src/app/login-container/login/login.component.html
+++ b/task-manager-ui/src/app/login-container/login/login.component.html
@@ -8,37 +8,21 @@
     <form class="p-3 mt-3" (ngSubmit)="onSubmitLogin()" #loginForm="ngForm">
         <div class="form-field d-flex align-items-center">
             <span class="far fa-user"></span>
-            <input
-                type="text"
-                name="userName"
-                id="userName"
-                placeholder="Username"
-                [(ngModel)]="login_userName"
-                #userNameInput="ngModel"
-                required
-            >
+            <input type="text" name="userName" id="userName" placeholder="Username" [(ngModel)]="login_userName"
+                #userNameInput="ngModel" required>
         </div>
         <div class="form-field d-flex align-items-center">
             <span class="fas fa-key"></span>
-            <input
-                type="password"
-                name="password"
-                id="pwd"
-                placeholder="Password"
-                [(ngModel)]="login_password"
-                #passwordInput="ngModel"
-                required
-            >
+            <input type="password" name="password" id="pwd" placeholder="Password" [(ngModel)]="login_password"
+                #passwordInput="ngModel" required>
         </div>
-        <button type="submit" class="btn mt-3">Login</button>
+        <button [disabled]="!loginForm.valid" type="submit" class="btn mt-3">Login</button>
     </form>
     <div class="text-center fs-6">
-        <a role="button" (click)="renderReset()">Forget password?</a> or <a role="button" (click)="signUpRequest()">Sign up</a>
+        <a role="button" (click)="renderReset()">Forget password?</a> or <a role="button" (click)="signUpRequest()">Sign
+            up</a>
     </div>
-    <span
-        class="help-block"
-        style="font-size: small; font-style: italic; color: red;"
-        *ngIf="login_error !== null">
+    <span class="help-block" style="font-size: small; font-style: italic; color: red;" *ngIf="login_error !== null">
         {{login_error}}
     </span>
 </div>
