--- a/task-manager-ui/src/app/login-container/signup/signup.component.html
+++ b/task-manager-ui/src/app/login-container/signup/signup.component.html
@@ -8,61 +8,30 @@
     <form class="p-3 mt-3" (ngSubmit)="onSubmitSignup()" #signUpForm="ngForm">
         <div class="form-field d-flex align-items-center">
             <span class="fa fa-user"></span>
-            <input
-                type="text"
-                name="name"
-                id="name"
-                placeholder="Enter your Name"
-                [(ngModel)]="signup_name"
-                #signupNameInput="ngModel"
-                required
-            >
+            <input type="text" name="name" id="name" placeholder="Enter your Name" [(ngModel)]="signup_name"
+                #signupNameInput="ngModel" required>
         </div>
         <div class="form-field d-flex align-items-center">
             <span class="far fa-user"></span>
-            <input
-                type="email"
-                name="email"
-                id="email"
-                placeholder="Enter your Email"
-                [(ngModel)]="signup_email"
-                #signupEmailInput="ngModel"
-                required
-            >
+            <input type="email" name="email" id="email" placeholder="Enter your Email" [(ngModel)]="signup_email"
+                #signupEmailInput="ngModel" required>
         </div>
         <div class="form-field d-flex align-items-center">
             <span class="far fa-user"></span>
-            <input
-                type="tel"
-                name="phone"
-                id="phone"
-                placeholder="Enter your Mobile Number"
-                [(ngModel)]="signup_phone"
-                #signupPhoneInput="ngModel"
-                required
-            >
+            <input type="tel" name="phone" id="phone" placeholder="Enter your Mobile Number" [(ngModel)]="signup_phone"
+                #signupPhoneInput="ngModel" required>
         </div>
         <div class="form-field d-flex align-items-center">
             <span class="fas fa-key"></span>
-            <input
-                type="password"
-                name="password"
-                id="pwd"
-                placeholder="Password"
-                [(ngModel)]="signup_password"
-                #signUpPasswordInput="ngModel"
-                required
-            >
+            <input type="password" name="password" id="pwd" placeholder="Password" [(ngModel)]="signup_password"
+                #signUpPasswordInput="ngModel" required>
         </div>
-        <button type="submit" class="btn mt-3">Sign Up</button>
+        <button [disabled]="!signUpForm.valid" type="submit" class="btn mt-3">Sign Up</button>
     </form>
     <div class="text-center fs-6">
         Already have an account? <a class="text-center fs-6" role="button" (click)="goToLogin()">Login</a>
     </div>
-    <span
-        class="help-block"
-        style="font-size: small; font-style: italic; color: red;"
-        *ngIf="singup_error !== null">
+    <span class="help-block" style="font-size: small; font-style: italic; color: red;" *ngIf="singup_error !== null">
         {{singup_error}}
     </span>
 </div>
