--- a/task-manager-ui/src/app/task-item/task-item.component.css
+++ b/task-manager-ui/src/app/task-item/task-item.component.css
@@ -1,11 +1,32 @@
 .label {
-    color: white;
-    padding: 2px;
-    border-radius:10%;
-  }
-  
-  .success {background-color: #04AA6D;} /* Green */
-  .info {background-color: #2196F3;} /* Blue */
-  .warning {background-color: #ff9800;} /* Orange */
-  .danger {background-color: #f44336;} /* Red */
-  .other {background-color: #e7e7e7; color: black;} /* Gray */
+  color: white;
+  padding: 2px;
+  border-radius: 10%;
+}
+
+.success {
+  background-color: #04AA6D;
+}
+
+/* Green */
+.info {
+  background-color: #2196F3;
+}
+
+/* Blue */
+.warning {
+  background-color: #ff9800;
+}
+
+/* Orange */
+.danger {
+  background-color: #f44336;
+}
+
+/* Red */
+.other {
+  background-color: #e7e7e7;
+  color: black;
+}
+
+/* Gray */
