--- a/task-manager-ui/src/app/task-item-list/task-item-list.component.css
+++ b/task-manager-ui/src/app/task-item-list/task-item-list.component.css
@@ -8,7 +8,7 @@
     gap: 24px;
 }
 
-.responsive-grid-toolbar {
+.responsive-grid-toolbar-row {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
     gap: 24px;
